Tutorial level updates (see notes)
- Tutorial level background added
-Tutorial death consequences removed

--- a/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,8 +74,8 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level_1
-MRUItem1=/Game/2DSideScrollerBP/Maps/Tutorial_Level
+MRUItem0=/Game/2DSideScrollerBP/Maps/Tutorial_Level
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level_1
 MRUItem2=/Game/2DSideScrollerBP/Maps/Level_2
 MRUItem3=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem4=/Game/2DSideScrollerBP/Maps/Mainmenu
@@ -96,19 +96,19 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints/Widgets
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/Level_1
+LastLevel=/Game/2DSideScrollerBP/Maps/Tutorial_Level
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Enemy_Blueprints/Spider_Enemy.Spider_Enemy
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level_1.Level_1:PersistentLevel.Level_1
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_Tutorial_Level.Ninja_Bunnies_Tutorial_Level
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -156,7 +156,7 @@ PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
 WorldSettings.World=True
-WorldSettings.GameMode=True
+WorldSettings.GameMode=False
 WorldSettings.Lightmass=True
 WorldSettings.Physics=True
 WorldSettings.Rendering=True
@@ -1168,8 +1168,136 @@ ScoreHud_C.Clipping=True
 ScoreHud_C.Performance=True
 ScoreHud_C.Render Transform=True
 ScoreHud_C.Navigation=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.AI=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.RichCurveEditor=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.TileMapEditor=True
+EditorKeyboardShortcutSettings.TileSetEditor=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerformanceSettings.EditorPerformance=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+EditorTutorialSettings.Tutorials=True
+VRModeSettings.General=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.Sequencer=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+LevelEditorPlaySettings.PlayOnDevice=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+SpriteEditorSettings.Background=True
+TileMapEditorSettings.Background=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+LogVisualizerSettings.VisualLogger=True
+REINST_2DSideScrollerCharacter_C_93.None=True
+REINST_2DSideScrollerCharacter_C_93.Tick=True
+REINST_2DSideScrollerCharacter_C_93.Character=True
+REINST_2DSideScrollerCharacter_C_93.Camera=True
+REINST_2DSideScrollerCharacter_C_93.Pawn=True
+REINST_2DSideScrollerCharacter_C_93.Rendering=True
+REINST_2DSideScrollerCharacter_C_93.Replication=True
+REINST_2DSideScrollerCharacter_C_93.Input=True
+REINST_2DSideScrollerCharacter_C_93.Actor=True
+CameraComponent.Physics=True
+CameraComponent.Collision=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Background_Sprite.Tutorial_Background_Sprite;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint.Tutorial_Checkpoint;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Checkpoint.Checkpoint;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
@@ -1189,19 +1317,18 @@ RecentlyPlaced=/Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers_Tutorial_Level/Tutorial_Bird.Tutorial_Bird;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers_Tutorial_Level/Tutorial_Spider.Tutorial_Spider;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy_Blueprints/Bird_Enemy.Bird_Enemy;
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[26].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[28].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[54].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[54].CollisionData.Shapes.Shapes[0].Vertices.Vertices[17]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[56].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[60]\" \"Object.Sprite.PerTileData.PerTileData[60].CollisionData.Shapes.Shapes[0]\" "
-Object=
+Object="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent=
-ActorComponent=
+PrimitiveComponent=
+SceneComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+ActorComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 BoxComponent=
 ShapeComponent=
 2DSideScrollerCharacter_C=
@@ -1219,6 +1346,9 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperTileMap=
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[18]\" "
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 
 [RootWindow]
 ScreenPosition=X=123.000 Y=47.000
@@ -1797,7 +1927,7 @@ SynthBenchmark.TimeStamp=2017.11.02-15.57.43
 SynthBenchmark.LastCompileMethod=External
 LauncherServices.TimeStamp=2017.09.26-13.10.18
 LauncherServices.LastCompileMethod=Unknown
-ExternalImagePicker.TimeStamp=2017.11.02-15.57.32
+ExternalImagePicker.TimeStamp=2018.08.25-19.13.24
 ExternalImagePicker.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2017.09.26-13.10.20
 NewLevelDialog.LastCompileMethod=Unknown
@@ -1913,6 +2043,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 BoolProperty=StructProperty.DefaultValueCategory.None,
 K2Node_VariableSet=StructProperty.DefaultValueCategory.None,
 K2Node_VariableGet=StructProperty.DefaultValueCategory.None,
+CameraComponent=CameraComponent.Color Grading.Color Grading|WhiteBalance,CameraComponent.Color Grading.Color Grading|Global,CameraComponent.Color Grading.Color Grading|Shadows,CameraComponent.Color Grading.Color Grading|Midtones,CameraComponent.Color Grading.Color Grading|Highlights,CameraComponent.Lens.Lens|Image Effects,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|Dirt Mask,CameraComponent.Lens.Lens|Auto ExposureAdvanced,CameraComponent.Lens.Lens|Auto Exposure,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Global Illumination,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,
 
 [MessageLog]
 LastLogListing=PIE
@@ -1951,6 +2082,6 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 
