Game update (see notes)
-Fixed issue with text actors not properly displaying
- Added collectables to promt player in the right direction (tutorial level)
- Added animation for the collectables
- Added image for the score in the HUD for the first level
- Iterated design of tutorial level

--- a/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,8 +74,8 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Tutorial_Level
-MRUItem1=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem1=/Game/2DSideScrollerBP/Maps/Tutorial_Level
 MRUItem2=/Game/2DSideScrollerBP/Maps/Level_2
 MRUItem3=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem4=/Game/2DSideScrollerBP/Maps/Mainmenu
@@ -96,19 +96,21 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/Tutorial_Level
+LastLevel=/Game/2DSideScrollerBP/Maps/Level_1
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_Tutorial_Level.Ninja_Bunnies_Tutorial_Level
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/HUDS/ScoreHud.ScoreHud
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/HUDS/MainMenuHUD.MainMenuHUD
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1144,7 +1146,7 @@ Tut_Text_3_C.Input=True
 Tut_Text_3_C.Actor=True
 Tut_Text_3_C.TransformCommon=True
 Tut_Text_4_C.Tick=True
-Tut_Text_4_C.Rendering=True
+Tut_Text_4_C.Rendering=False
 Tut_Text_4_C.Replication=True
 Tut_Text_4_C.Input=True
 Tut_Text_4_C.Actor=True
@@ -1295,16 +1297,26 @@ REINST_2DSideScrollerCharacter_C_93.Input=True
 REINST_2DSideScrollerCharacter_C_93.Actor=True
 CameraComponent.Physics=True
 CameraComponent.Collision=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.Cooking=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Background_Sprite.Tutorial_Background_Sprite;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint.Tutorial_Checkpoint;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Checkpoint.Checkpoint;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_4.Tut_Text_4;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_3.Tut_Text_3;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_2.Tut_Text_2;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Collection.Collection;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Background_Sprite.Tutorial_Background_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint.Tutorial_Checkpoint;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Checkpoint.Checkpoint;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_1.Tut_Text_1;
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Text_Sprite_0.Tutorial_Text_Sprite_0;
@@ -1316,19 +1328,18 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Hazard.Hazard;
 RecentlyPlaced=/Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers_Tutorial_Level/Tutorial_Bird.Tutorial_Bird;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers_Tutorial_Level/Tutorial_Spider.Tutorial_Spider;
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[26].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[28].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[54].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[54].CollisionData.Shapes.Shapes[0].Vertices.Vertices[17]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[56].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[60]\" \"Object.Sprite.PerTileData.PerTileData[60].CollisionData.Shapes.Shapes[0]\" "
-Object="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
-PaperSpriteComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object=
+PaperSpriteComponent=
+MeshComponent=
 PrimitiveComponent=
-SceneComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
-ActorComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+SceneComponent=
+ActorComponent=
 BoxComponent=
 ShapeComponent=
 2DSideScrollerCharacter_C=
@@ -1345,13 +1356,13 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperTileMap=
-PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[18]\" "
+PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[8]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 
 [RootWindow]
-ScreenPosition=X=123.000 Y=47.000
+ScreenPosition=X=-1604.000 Y=80.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1373,7 +1384,7 @@ UNR=../../../../../../Users/hopet/Documents/GitHub/lvl6/level-6-l6-group-9/Quwai
 BRUSH=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBX=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBXAnim=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
-GenericImport=../../../../../../Users/Quwaine/Documents/GitHub/level-6-l6-group-9/Artwork/Current Idea/PNG/Menus & Fonts/Colour/Tutorial_Text4.png
+GenericImport=../../../../../../Users/hopet/Documents/GitHub/lvl6/level-6-l6-group-9/Artwork/Current Idea/PNG/Menus & Fonts/Colour/Score Button colour.png
 GenericExport=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericOpen=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericSave=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
@@ -1989,6 +2000,13 @@ NewLevelDialog.LastCompileMethod=Unknown
 /Game/2DSideScrollerBP/Blueprints/Tut_Text_1.Tut_Text_1=1
 /Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint1.Tutorial_Checkpoint1=1
 /Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint.Tutorial_Checkpoint=1
+/Game/2DSideScrollerBP/Sprites/objects/Ninja_Star_Flipbook.Ninja_Star_Flipbook=1
+/Game/2DSideScrollerBP/Sprites/objects/Ninja_Star_Sprite_Sheet1.Ninja_Star_Sprite_Sheet1=1
+/Game/2DSideScrollerBP/Blueprints/Tut_Text_2.Tut_Text_2=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Background_Sprite.Tutorial_Background_Sprite=1
+/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Text4_Sprite.Tutorial_Text4_Sprite=1
+/Game/2DSideScrollerBP/Blueprints/Tut_Text_4.Tut_Text_4=1
+/Game/2DSideScrollerBP/Blueprints/HUDS/ScoreHud.ScoreHud=1
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -2031,6 +2049,7 @@ bVisualizePreAndPostRoll=True
 [DetailCategoriesAdvanced]
 LevelSequenceActor.General=True
 BoxComponent.Collision=True
+PaperSprite.Rendering=True
 
 [PluginBrowser]
 InstalledPlugins=ModoMaterialImporter
@@ -2043,7 +2062,8 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 BoolProperty=StructProperty.DefaultValueCategory.None,
 K2Node_VariableSet=StructProperty.DefaultValueCategory.None,
 K2Node_VariableGet=StructProperty.DefaultValueCategory.None,
-CameraComponent=CameraComponent.Color Grading.Color Grading|WhiteBalance,CameraComponent.Color Grading.Color Grading|Global,CameraComponent.Color Grading.Color Grading|Shadows,CameraComponent.Color Grading.Color Grading|Midtones,CameraComponent.Color Grading.Color Grading|Highlights,CameraComponent.Lens.Lens|Image Effects,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|Dirt Mask,CameraComponent.Lens.Lens|Auto ExposureAdvanced,CameraComponent.Lens.Lens|Auto Exposure,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Global Illumination,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,
+CameraComponent=CameraComponent.Color Grading.Color Grading,
+IntProperty=StructProperty.DefaultValueCategory.None,
 
 [MessageLog]
 LastLogListing=PIE
