--- a/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -96,7 +96,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -107,10 +107,6 @@ LastLevel=/Game/2DSideScrollerBP/Maps/Level_1
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/HUDS/ScoreHud.ScoreHud
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/HUDS/MainMenuHUD.MainMenuHUD
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1333,8 +1329,8 @@ RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[26].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[28].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[54].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[54].CollisionData.Shapes.Shapes[0].Vertices.Vertices[17]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[56].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[60]\" \"Object.Sprite.PerTileData.PerTileData[60].CollisionData.Shapes.Shapes[0]\" "
-Object=
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0].Vertices.Vertices[6]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[60]\" "
+Object="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0].Vertices.Vertices[6]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[60]\" "
 PaperSpriteComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -1355,14 +1351,14 @@ PanelWidget=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PaperTileMap=
+PaperTileMap="\"Object.Sprite.TileLayers.TileLayers[1]\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[8]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 
 [RootWindow]
-ScreenPosition=X=-1604.000 Y=80.000
+ScreenPosition=X=123.000 Y=47.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1380,7 +1376,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/hopet/Documents/GitHub/lvl6/level-6-l6-group-9/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
+UNR=../../../../../../Users/Quwaine/Documents/GitHub/level-6-l6-group-9/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBX=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBXAnim=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
