--- a/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,9 +74,9 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level_1
-MRUItem1=/Game/2DSideScrollerBP/Maps/Tutorial_Level
-MRUItem2=/Game/2DSideScrollerBP/Maps/Level_2
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level_2
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem2=/Game/2DSideScrollerBP/Maps/Tutorial_Level
 MRUItem3=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem4=/Game/2DSideScrollerBP/Maps/Mainmenu
 
@@ -103,10 +103,19 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/Level_1
+LastLevel=/Game/2DSideScrollerBP/Maps/Level_2
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/NInja_Bunnies_Boss_Level.NInja_Bunnies_Boss_Level
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9_Sprite.CircleOf9_Sprite
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin2_Sprite.CircleOf9reskin2_Sprite
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin3_Sprite.CircleOf9reskin3_Sprite
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin4_Sprite.CircleOf9reskin4_Sprite
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin5_Sprite.CircleOf9reskin5_Sprite
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin_Sprite.CircleOf9reskin_Sprite
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/PandaMouse_Ninja_Idle_Sprite_0.PandaMouse_Ninja_Idle_Sprite_0
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level_2.Level_2:PersistentLevel.Level_2
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1302,35 +1311,41 @@ PlayerCameraManager.PlayerCameraManager=True
 PlayerCameraManager.Debug=True
 PlayerCameraManager.Input=True
 PlayerCameraManager.Actor=True
+CameraBlockingVolume.TransformCommon=True
+CameraBlockingVolume.Tags=True
+CameraBlockingVolume.Collision=True
+CameraBlockingVolume.Cooking=True
+CameraBlockingVolume.BrushSettings=True
+CameraBlockingVolume.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/PandaMouse_Ninja_Idle_Sprite_0.PandaMouse_Ninja_Idle_Sprite_0;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Cat_Ninja_Idle_Sprite_0.Cat_Ninja_Idle_Sprite_0;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Cat_Ninja_Idle1.Cat_Ninja_Idle1;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/PandaMouse_Ninja_Idle1.PandaMouse_Ninja_Idle1;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin_Sprite.CircleOf9reskin_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin5_Sprite.CircleOf9reskin5_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin4_Sprite.CircleOf9reskin4_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin3_Sprite.CircleOf9reskin3_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9reskin2_Sprite.CircleOf9reskin2_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/CircleOf9_Sprite.CircleOf9_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/win_screen_Sprite.win_screen_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/Level2background_Sprite.Level2background_Sprite;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/NInja_Bunnies_Boss_Level.NInja_Bunnies_Boss_Level;
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
+RecentlyPlaced=/Script/Engine.CameraBlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_5
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_4.Tut_Text_4;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_3.Tut_Text_3;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_2.Tut_Text_2;
-RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Collection.Collection;
-RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Background_Sprite.Tutorial_Background_Sprite;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint.Tutorial_Checkpoint;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Checkpoint.Checkpoint;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_1.Tut_Text_1;
-RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Text_Sprite_0.Tutorial_Text_Sprite_0;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint1.Tutorial_Checkpoint1;
-RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/Tileset_ver_04_Sprite_56.Tileset_ver_04_Sprite_56;
-RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Enemies/Shogun_Spider_Colour_sprite_sheet_walking_animation.Shogun_Spider_Colour_sprite_sheet_walking_animation;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Hazard.Tutorial_Hazard;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Hazard.Hazard;
-RecentlyPlaced=/Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers_Tutorial_Level/Tutorial_Bird.Tutorial_Bird;
-RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0].Vertices.Vertices[6]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[60]\" "
-Object="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0].Vertices.Vertices[6]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[60]\" "
+Object=
 PaperSpriteComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -1351,11 +1366,13 @@ PanelWidget=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PaperTileMap="\"Object.Sprite.TileLayers.TileLayers[1]\" "
+PaperTileMap=
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[8]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+CameraBlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PaperSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [RootWindow]
 ScreenPosition=X=123.000 Y=47.000
@@ -2003,6 +2020,8 @@ NewLevelDialog.LastCompileMethod=Unknown
 /Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Text4_Sprite.Tutorial_Text4_Sprite=1
 /Game/2DSideScrollerBP/Blueprints/Tut_Text_4.Tut_Text_4=1
 /Game/2DSideScrollerBP/Blueprints/HUDS/ScoreHud.ScoreHud=1
+/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/Level2background_Sprite.Level2background_Sprite=1
+/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/win_screen_Sprite.win_screen_Sprite=1
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
